orig/sintatico.output
Terminals unused in grammar

   TOKEN_ERRO


Grammar

    0 $accept: programa TOKEN_EOF

    1 programa: PROGRAM TOKEN_IDENTIFICADOR TOKEN_PONTO_VIRGULA corpo TOKEN_PONTO_FINAL
    2         | error TOKEN_PONTO_FINAL

    3 corpo: dc BEGN comandos END

    4 dc: dc_c dc_v dc_p

    5 dc_c: CONST TOKEN_IDENTIFICADOR TOKEN_ATRIBUICAO numero TOKEN_PONTO_VIRGULA dc_c
    6     | /* empty */

    7 dc_v: VAR variaveis TOKEN_DOIS_PONTOS tipo_var TOKEN_PONTO_VIRGULA dc_v
    8     | /* empty */

    9 tipo_var: REAL
   10         | INTEGER

   11 variaveis: TOKEN_IDENTIFICADOR mais_var

   12 mais_var: TOKEN_VIRGULA variaveis
   13         | /* empty */

   14 dc_p: PROCEDURE TOKEN_IDENTIFICADOR parametros TOKEN_PONTO_VIRGULA corpo_p dc_p
   15     | /* empty */

   16 parametros: TOKEN_ABRE_PAR lista_par TOKEN_FECHA_PAR
   17           | /* empty */

   18 lista_par: variaveis TOKEN_DOIS_PONTOS tipo_var mais_par

   19 mais_par: TOKEN_PONTO_VIRGULA lista_par
   20         | /* empty */

   21 corpo_p: dc_loc BEGN comandos END TOKEN_PONTO_VIRGULA

   22 dc_loc: dc_v

   23 lista_arg: TOKEN_ABRE_PAR argumentos TOKEN_FECHA_PAR
   24          | /* empty */

   25 argumentos: TOKEN_IDENTIFICADOR mais_ident

   26 mais_ident: TOKEN_PONTO_VIRGULA argumentos
   27           | /* empty */

   28 comandos: cmd TOKEN_PONTO_VIRGULA comandos
   29         | /* empty */

   30 cmd: matched
   31    | unmatched

   32 matched: other_stmt
   33        | IF condicao THEN matched ELSE matched

   34 unmatched: IF condicao THEN cmd
   35          | IF condicao THEN matched ELSE unmatched

   36 other_stmt: READLN TOKEN_ABRE_PAR variaveis TOKEN_FECHA_PAR
   37           | WRITELN TOKEN_ABRE_PAR variaveis TOKEN_FECHA_PAR
   38           | REPEAT comandos UNTIL condicao
   39           | WHILE condicao DO other_stmt
   40           | TOKEN_IDENTIFICADOR cmd_linha
   41           | BEGN comandos END

   42 cmd_linha: TOKEN_ATRIBUICAO expressao
   43          | lista_arg

   44 condicao: expressao relacao expressao

   45 relacao: TOKEN_IGUAL
   46        | TOKEN_DIFERENTE
   47        | TOKEN_MENOR_IGUAL
   48        | TOKEN_MAIOR_IGUAL
   49        | TOKEN_MENOR
   50        | TOKEN_MAIOR

   51 expressao: termo
   52          | expressao op_termo termo

   53 termo: fator
   54      | termo op_fator fator

   55 fator: op_un numero
   56      | TOKEN_ABRE_PAR expressao TOKEN_FECHA_PAR

   57 op_un: TOKEN_SOMA
   58      | TOKEN_SUB
   59      | /* empty */

   60 op_termo: TOKEN_SOMA
   61         | TOKEN_SUB

   62 op_fator: TOKEN_MUL
   63         | TOKEN_DIV

   64 numero: TOKEN_LITERAL_INTEIRO
   65       | TOKEN_LITERAL_REAL


Terminals, with rules where they appear

TOKEN_EOF (0) 0
error (256) 2
PROGRAM (258) 1
BEGN (259) 3 21 41
END (260) 3 21 41
VAR (261) 7
INTEGER (262) 10
CONST (263) 5
REAL (264) 9
PROCEDURE (265) 14
ELSE (266) 33 35
READLN (267) 36
WRITELN (268) 37
REPEAT (269) 38
UNTIL (270) 38
IF (271) 33 34 35
THEN (272) 33 34 35
WHILE (273) 39
DO (274) 39
TOKEN_ATRIBUICAO (275) 5 42
TOKEN_IGUAL (276) 45
TOKEN_DIFERENTE (277) 46
TOKEN_MAIOR_IGUAL (278) 48
TOKEN_MENOR_IGUAL (279) 47
TOKEN_MAIOR (280) 50
TOKEN_MENOR (281) 49
TOKEN_SOMA (282) 57 60
TOKEN_SUB (283) 58 61
TOKEN_MUL (284) 62
TOKEN_DIV (285) 63
TOKEN_ABRE_PAR (286) 16 23 36 37 56
TOKEN_FECHA_PAR (287) 16 23 36 37 56
TOKEN_VIRGULA (288) 12
TOKEN_PONTO_VIRGULA (289) 1 5 7 14 19 21 26 28
TOKEN_DOIS_PONTOS (290) 7 18
TOKEN_PONTO_FINAL (291) 1 2
TOKEN_IDENTIFICADOR (292) 1 5 11 14 25 40
TOKEN_LITERAL_INTEIRO (293) 64
TOKEN_LITERAL_REAL (294) 65
TOKEN_ERRO (295)


Nonterminals, with rules where they appear

$accept (41)
    on left: 0
programa (42)
    on left: 1 2, on right: 0
corpo (43)
    on left: 3, on right: 1
dc (44)
    on left: 4, on right: 3
dc_c (45)
    on left: 5 6, on right: 4 5
dc_v (46)
    on left: 7 8, on right: 4 7 22
tipo_var (47)
    on left: 9 10, on right: 7 18
variaveis (48)
    on left: 11, on right: 7 12 18 36 37
mais_var (49)
    on left: 12 13, on right: 11
dc_p (50)
    on left: 14 15, on right: 4 14
parametros (51)
    on left: 16 17, on right: 14
lista_par (52)
    on left: 18, on right: 16 19
mais_par (53)
    on left: 19 20, on right: 18
corpo_p (54)
    on left: 21, on right: 14
dc_loc (55)
    on left: 22, on right: 21
lista_arg (56)
    on left: 23 24, on right: 43
argumentos (57)
    on left: 25, on right: 23 26
mais_ident (58)
    on left: 26 27, on right: 25
comandos (59)
    on left: 28 29, on right: 3 21 28 38 41
cmd (60)
    on left: 30 31, on right: 28 34
matched (61)
    on left: 32 33, on right: 30 33 35
unmatched (62)
    on left: 34 35, on right: 31 35
other_stmt (63)
    on left: 36 37 38 39 40 41, on right: 32 39
cmd_linha (64)
    on left: 42 43, on right: 40
condicao (65)
    on left: 44, on right: 33 34 35 38 39
relacao (66)
    on left: 45 46 47 48 49 50, on right: 44
expressao (67)
    on left: 51 52, on right: 42 44 52 56
termo (68)
    on left: 53 54, on right: 51 52 54
fator (69)
    on left: 55 56, on right: 53 54
op_un (70)
    on left: 57 58 59, on right: 55
op_termo (71)
    on left: 60 61, on right: 52
op_fator (72)
    on left: 62 63, on right: 54
numero (73)
    on left: 64 65, on right: 5 55


state 0

    0 $accept: . programa TOKEN_EOF
    1 programa: . PROGRAM TOKEN_IDENTIFICADOR TOKEN_PONTO_VIRGULA corpo TOKEN_PONTO_FINAL
    2         | . error TOKEN_PONTO_FINAL

    error    shift, and go to state 1
    PROGRAM  shift, and go to state 2

    programa  go to state 3


state 1

    2 programa: error . TOKEN_PONTO_FINAL

    TOKEN_PONTO_FINAL  shift, and go to state 4


state 2

    1 programa: PROGRAM . TOKEN_IDENTIFICADOR TOKEN_PONTO_VIRGULA corpo TOKEN_PONTO_FINAL

    TOKEN_IDENTIFICADOR  shift, and go to state 5


state 3

    0 $accept: programa . TOKEN_EOF

    TOKEN_EOF  shift, and go to state 6


state 4

    2 programa: error TOKEN_PONTO_FINAL .

    $default  reduce using rule 2 (programa)


state 5

    1 programa: PROGRAM TOKEN_IDENTIFICADOR . TOKEN_PONTO_VIRGULA corpo TOKEN_PONTO_FINAL

    TOKEN_PONTO_VIRGULA  shift, and go to state 7


state 6

    0 $accept: programa TOKEN_EOF .

    $default  accept


state 7

    1 programa: PROGRAM TOKEN_IDENTIFICADOR TOKEN_PONTO_VIRGULA . corpo TOKEN_PONTO_FINAL
    3 corpo: . dc BEGN comandos END
    4 dc: . dc_c dc_v dc_p
    5 dc_c: . CONST TOKEN_IDENTIFICADOR TOKEN_ATRIBUICAO numero TOKEN_PONTO_VIRGULA dc_c
    6     | .  [BEGN, VAR, PROCEDURE]

    CONST  shift, and go to state 8

    $default  reduce using rule 6 (dc_c)

    corpo  go to state 9
    dc     go to state 10
    dc_c   go to state 11


state 8

    5 dc_c: CONST . TOKEN_IDENTIFICADOR TOKEN_ATRIBUICAO numero TOKEN_PONTO_VIRGULA dc_c

    TOKEN_IDENTIFICADOR  shift, and go to state 12


state 9

    1 programa: PROGRAM TOKEN_IDENTIFICADOR TOKEN_PONTO_VIRGULA corpo . TOKEN_PONTO_FINAL

    TOKEN_PONTO_FINAL  shift, and go to state 13


state 10

    3 corpo: dc . BEGN comandos END

    BEGN  shift, and go to state 14


state 11

    4 dc: dc_c . dc_v dc_p
    7 dc_v: . VAR variaveis TOKEN_DOIS_PONTOS tipo_var TOKEN_PONTO_VIRGULA dc_v
    8     | .  [BEGN, PROCEDURE]

    VAR  shift, and go to state 15

    $default  reduce using rule 8 (dc_v)

    dc_v  go to state 16


state 12

    5 dc_c: CONST TOKEN_IDENTIFICADOR . TOKEN_ATRIBUICAO numero TOKEN_PONTO_VIRGULA dc_c

    TOKEN_ATRIBUICAO  shift, and go to state 17


state 13

    1 programa: PROGRAM TOKEN_IDENTIFICADOR TOKEN_PONTO_VIRGULA corpo TOKEN_PONTO_FINAL .

    $default  reduce using rule 1 (programa)


state 14

    3 corpo: dc BEGN . comandos END
   28 comandos: . cmd TOKEN_PONTO_VIRGULA comandos
   29         | .  [END]
   30 cmd: . matched
   31    | . unmatched
   32 matched: . other_stmt
   33        | . IF condicao THEN matched ELSE matched
   34 unmatched: . IF condicao THEN cmd
   35          | . IF condicao THEN matched ELSE unmatched
   36 other_stmt: . READLN TOKEN_ABRE_PAR variaveis TOKEN_FECHA_PAR
   37           | . WRITELN TOKEN_ABRE_PAR variaveis TOKEN_FECHA_PAR
   38           | . REPEAT comandos UNTIL condicao
   39           | . WHILE condicao DO other_stmt
   40           | . TOKEN_IDENTIFICADOR cmd_linha
   41           | . BEGN comandos END

    BEGN                 shift, and go to state 18
    READLN               shift, and go to state 19
    WRITELN              shift, and go to state 20
    REPEAT               shift, and go to state 21
    IF                   shift, and go to state 22
    WHILE                shift, and go to state 23
    TOKEN_IDENTIFICADOR  shift, and go to state 24

    $default  reduce using rule 29 (comandos)

    comandos    go to state 25
    cmd         go to state 26
    matched     go to state 27
    unmatched   go to state 28
    other_stmt  go to state 29


state 15

    7 dc_v: VAR . variaveis TOKEN_DOIS_PONTOS tipo_var TOKEN_PONTO_VIRGULA dc_v
   11 variaveis: . TOKEN_IDENTIFICADOR mais_var

    TOKEN_IDENTIFICADOR  shift, and go to state 30

    variaveis  go to state 31


state 16

    4 dc: dc_c dc_v . dc_p
   14 dc_p: . PROCEDURE TOKEN_IDENTIFICADOR parametros TOKEN_PONTO_VIRGULA corpo_p dc_p
   15     | .  [BEGN]

    PROCEDURE  shift, and go to state 32

    $default  reduce using rule 15 (dc_p)

    dc_p  go to state 33


state 17

    5 dc_c: CONST TOKEN_IDENTIFICADOR TOKEN_ATRIBUICAO . numero TOKEN_PONTO_VIRGULA dc_c
   64 numero: . TOKEN_LITERAL_INTEIRO
   65       | . TOKEN_LITERAL_REAL

    TOKEN_LITERAL_INTEIRO  shift, and go to state 34
    TOKEN_LITERAL_REAL     shift, and go to state 35

    numero  go to state 36


state 18

   28 comandos: . cmd TOKEN_PONTO_VIRGULA comandos
   29         | .  [END]
   30 cmd: . matched
   31    | . unmatched
   32 matched: . other_stmt
   33        | . IF condicao THEN matched ELSE matched
   34 unmatched: . IF condicao THEN cmd
   35          | . IF condicao THEN matched ELSE unmatched
   36 other_stmt: . READLN TOKEN_ABRE_PAR variaveis TOKEN_FECHA_PAR
   37           | . WRITELN TOKEN_ABRE_PAR variaveis TOKEN_FECHA_PAR
   38           | . REPEAT comandos UNTIL condicao
   39           | . WHILE condicao DO other_stmt
   40           | . TOKEN_IDENTIFICADOR cmd_linha
   41           | . BEGN comandos END
   41           | BEGN . comandos END

    BEGN                 shift, and go to state 18
    READLN               shift, and go to state 19
    WRITELN              shift, and go to state 20
    REPEAT               shift, and go to state 21
    IF                   shift, and go to state 22
    WHILE                shift, and go to state 23
    TOKEN_IDENTIFICADOR  shift, and go to state 24

    $default  reduce using rule 29 (comandos)

    comandos    go to state 37
    cmd         go to state 26
    matched     go to state 27
    unmatched   go to state 28
    other_stmt  go to state 29


state 19

   36 other_stmt: READLN . TOKEN_ABRE_PAR variaveis TOKEN_FECHA_PAR

    TOKEN_ABRE_PAR  shift, and go to state 38


state 20

   37 other_stmt: WRITELN . TOKEN_ABRE_PAR variaveis TOKEN_FECHA_PAR

    TOKEN_ABRE_PAR  shift, and go to state 39


state 21

   28 comandos: . cmd TOKEN_PONTO_VIRGULA comandos
   29         | .  [UNTIL]
   30 cmd: . matched
   31    | . unmatched
   32 matched: . other_stmt
   33        | . IF condicao THEN matched ELSE matched
   34 unmatched: . IF condicao THEN cmd
   35          | . IF condicao THEN matched ELSE unmatched
   36 other_stmt: . READLN TOKEN_ABRE_PAR variaveis TOKEN_FECHA_PAR
   37           | . WRITELN TOKEN_ABRE_PAR variaveis TOKEN_FECHA_PAR
   38           | . REPEAT comandos UNTIL condicao
   38           | REPEAT . comandos UNTIL condicao
   39           | . WHILE condicao DO other_stmt
   40           | . TOKEN_IDENTIFICADOR cmd_linha
   41           | . BEGN comandos END

    BEGN                 shift, and go to state 18
    READLN               shift, and go to state 19
    WRITELN              shift, and go to state 20
    REPEAT               shift, and go to state 21
    IF                   shift, and go to state 22
    WHILE                shift, and go to state 23
    TOKEN_IDENTIFICADOR  shift, and go to state 24

    $default  reduce using rule 29 (comandos)

    comandos    go to state 40
    cmd         go to state 26
    matched     go to state 27
    unmatched   go to state 28
    other_stmt  go to state 29


state 22

   33 matched: IF . condicao THEN matched ELSE matched
   34 unmatched: IF . condicao THEN cmd
   35          | IF . condicao THEN matched ELSE unmatched
   44 condicao: . expressao relacao expressao
   51 expressao: . termo
   52          | . expressao op_termo termo
   53 termo: . fator
   54      | . termo op_fator fator
   55 fator: . op_un numero
   56      | . TOKEN_ABRE_PAR expressao TOKEN_FECHA_PAR
   57 op_un: . TOKEN_SOMA
   58      | . TOKEN_SUB
   59      | .  [TOKEN_LITERAL_INTEIRO, TOKEN_LITERAL_REAL]

    TOKEN_SOMA      shift, and go to state 41
    TOKEN_SUB       shift, and go to state 42
    TOKEN_ABRE_PAR  shift, and go to state 43

    $default  reduce using rule 59 (op_un)

    condicao   go to state 44
    expressao  go to state 45
    termo      go to state 46
    fator      go to state 47
    op_un      go to state 48


state 23

   39 other_stmt: WHILE . condicao DO other_stmt
   44 condicao: . expressao relacao expressao
   51 expressao: . termo
   52          | . expressao op_termo termo
   53 termo: . fator
   54      | . termo op_fator fator
   55 fator: . op_un numero
   56      | . TOKEN_ABRE_PAR expressao TOKEN_FECHA_PAR
   57 op_un: . TOKEN_SOMA
   58      | . TOKEN_SUB
   59      | .  [TOKEN_LITERAL_INTEIRO, TOKEN_LITERAL_REAL]

    TOKEN_SOMA      shift, and go to state 41
    TOKEN_SUB       shift, and go to state 42
    TOKEN_ABRE_PAR  shift, and go to state 43

    $default  reduce using rule 59 (op_un)

    condicao   go to state 49
    expressao  go to state 45
    termo      go to state 46
    fator      go to state 47
    op_un      go to state 48


state 24

   23 lista_arg: . TOKEN_ABRE_PAR argumentos TOKEN_FECHA_PAR
   24          | .  [ELSE, TOKEN_PONTO_VIRGULA]
   40 other_stmt: TOKEN_IDENTIFICADOR . cmd_linha
   42 cmd_linha: . TOKEN_ATRIBUICAO expressao
   43          | . lista_arg

    TOKEN_ATRIBUICAO  shift, and go to state 50
    TOKEN_ABRE_PAR    shift, and go to state 51

    $default  reduce using rule 24 (lista_arg)

    lista_arg  go to state 52
    cmd_linha  go to state 53


state 25

    3 corpo: dc BEGN comandos . END

    END  shift, and go to state 54


state 26

   28 comandos: cmd . TOKEN_PONTO_VIRGULA comandos

    TOKEN_PONTO_VIRGULA  shift, and go to state 55


state 27

   30 cmd: matched .

    $default  reduce using rule 30 (cmd)


state 28

   31 cmd: unmatched .

    $default  reduce using rule 31 (cmd)


state 29

   32 matched: other_stmt .

    $default  reduce using rule 32 (matched)


state 30

   11 variaveis: TOKEN_IDENTIFICADOR . mais_var
   12 mais_var: . TOKEN_VIRGULA variaveis
   13         | .  [TOKEN_FECHA_PAR, TOKEN_DOIS_PONTOS]

    TOKEN_VIRGULA  shift, and go to state 56

    $default  reduce using rule 13 (mais_var)

    mais_var  go to state 57


state 31

    7 dc_v: VAR variaveis . TOKEN_DOIS_PONTOS tipo_var TOKEN_PONTO_VIRGULA dc_v

    TOKEN_DOIS_PONTOS  shift, and go to state 58


state 32

   14 dc_p: PROCEDURE . TOKEN_IDENTIFICADOR parametros TOKEN_PONTO_VIRGULA corpo_p dc_p

    TOKEN_IDENTIFICADOR  shift, and go to state 59


state 33

    4 dc: dc_c dc_v dc_p .

    $default  reduce using rule 4 (dc)


state 34

   64 numero: TOKEN_LITERAL_INTEIRO .

    $default  reduce using rule 64 (numero)


state 35

   65 numero: TOKEN_LITERAL_REAL .

    $default  reduce using rule 65 (numero)


state 36

    5 dc_c: CONST TOKEN_IDENTIFICADOR TOKEN_ATRIBUICAO numero . TOKEN_PONTO_VIRGULA dc_c

    TOKEN_PONTO_VIRGULA  shift, and go to state 60


state 37

   41 other_stmt: BEGN comandos . END

    END  shift, and go to state 61


state 38

   11 variaveis: . TOKEN_IDENTIFICADOR mais_var
   36 other_stmt: READLN TOKEN_ABRE_PAR . variaveis TOKEN_FECHA_PAR

    TOKEN_IDENTIFICADOR  shift, and go to state 30

    variaveis  go to state 62


state 39

   11 variaveis: . TOKEN_IDENTIFICADOR mais_var
   37 other_stmt: WRITELN TOKEN_ABRE_PAR . variaveis TOKEN_FECHA_PAR

    TOKEN_IDENTIFICADOR  shift, and go to state 30

    variaveis  go to state 63


state 40

   38 other_stmt: REPEAT comandos . UNTIL condicao

    UNTIL  shift, and go to state 64


state 41

   57 op_un: TOKEN_SOMA .

    $default  reduce using rule 57 (op_un)


state 42

   58 op_un: TOKEN_SUB .

    $default  reduce using rule 58 (op_un)


state 43

   51 expressao: . termo
   52          | . expressao op_termo termo
   53 termo: . fator
   54      | . termo op_fator fator
   55 fator: . op_un numero
   56      | . TOKEN_ABRE_PAR expressao TOKEN_FECHA_PAR
   56      | TOKEN_ABRE_PAR . expressao TOKEN_FECHA_PAR
   57 op_un: . TOKEN_SOMA
   58      | . TOKEN_SUB
   59      | .  [TOKEN_LITERAL_INTEIRO, TOKEN_LITERAL_REAL]

    TOKEN_SOMA      shift, and go to state 41
    TOKEN_SUB       shift, and go to state 42
    TOKEN_ABRE_PAR  shift, and go to state 43

    $default  reduce using rule 59 (op_un)

    expressao  go to state 65
    termo      go to state 46
    fator      go to state 47
    op_un      go to state 48


state 44

   33 matched: IF condicao . THEN matched ELSE matched
   34 unmatched: IF condicao . THEN cmd
   35          | IF condicao . THEN matched ELSE unmatched

    THEN  shift, and go to state 66


state 45

   44 condicao: expressao . relacao expressao
   45 relacao: . TOKEN_IGUAL
   46        | . TOKEN_DIFERENTE
   47        | . TOKEN_MENOR_IGUAL
   48        | . TOKEN_MAIOR_IGUAL
   49        | . TOKEN_MENOR
   50        | . TOKEN_MAIOR
   52 expressao: expressao . op_termo termo
   60 op_termo: . TOKEN_SOMA
   61         | . TOKEN_SUB

    TOKEN_IGUAL        shift, and go to state 67
    TOKEN_DIFERENTE    shift, and go to state 68
    TOKEN_MAIOR_IGUAL  shift, and go to state 69
    TOKEN_MENOR_IGUAL  shift, and go to state 70
    TOKEN_MAIOR        shift, and go to state 71
    TOKEN_MENOR        shift, and go to state 72
    TOKEN_SOMA         shift, and go to state 73
    TOKEN_SUB          shift, and go to state 74

    relacao   go to state 75
    op_termo  go to state 76


state 46

   51 expressao: termo .  [ELSE, THEN, DO, TOKEN_IGUAL, TOKEN_DIFERENTE, TOKEN_MAIOR_IGUAL, TOKEN_MENOR_IGUAL, TOKEN_MAIOR, TOKEN_MENOR, TOKEN_SOMA, TOKEN_SUB, TOKEN_FECHA_PAR, TOKEN_PONTO_VIRGULA]
   54 termo: termo . op_fator fator
   62 op_fator: . TOKEN_MUL
   63         | . TOKEN_DIV

    TOKEN_MUL  shift, and go to state 77
    TOKEN_DIV  shift, and go to state 78

    $default  reduce using rule 51 (expressao)

    op_fator  go to state 79


state 47

   53 termo: fator .

    $default  reduce using rule 53 (termo)


state 48

   55 fator: op_un . numero
   64 numero: . TOKEN_LITERAL_INTEIRO
   65       | . TOKEN_LITERAL_REAL

    TOKEN_LITERAL_INTEIRO  shift, and go to state 34
    TOKEN_LITERAL_REAL     shift, and go to state 35

    numero  go to state 80


state 49

   39 other_stmt: WHILE condicao . DO other_stmt

    DO  shift, and go to state 81


state 50

   42 cmd_linha: TOKEN_ATRIBUICAO . expressao
   51 expressao: . termo
   52          | . expressao op_termo termo
   53 termo: . fator
   54      | . termo op_fator fator
   55 fator: . op_un numero
   56      | . TOKEN_ABRE_PAR expressao TOKEN_FECHA_PAR
   57 op_un: . TOKEN_SOMA
   58      | . TOKEN_SUB
   59      | .  [TOKEN_LITERAL_INTEIRO, TOKEN_LITERAL_REAL]

    TOKEN_SOMA      shift, and go to state 41
    TOKEN_SUB       shift, and go to state 42
    TOKEN_ABRE_PAR  shift, and go to state 43

    $default  reduce using rule 59 (op_un)

    expressao  go to state 82
    termo      go to state 46
    fator      go to state 47
    op_un      go to state 48


state 51

   23 lista_arg: TOKEN_ABRE_PAR . argumentos TOKEN_FECHA_PAR
   25 argumentos: . TOKEN_IDENTIFICADOR mais_ident

    TOKEN_IDENTIFICADOR  shift, and go to state 83

    argumentos  go to state 84


state 52

   43 cmd_linha: lista_arg .

    $default  reduce using rule 43 (cmd_linha)


state 53

   40 other_stmt: TOKEN_IDENTIFICADOR cmd_linha .

    $default  reduce using rule 40 (other_stmt)


state 54

    3 corpo: dc BEGN comandos END .

    $default  reduce using rule 3 (corpo)


state 55

   28 comandos: . cmd TOKEN_PONTO_VIRGULA comandos
   28         | cmd TOKEN_PONTO_VIRGULA . comandos
   29         | .  [END, UNTIL]
   30 cmd: . matched
   31    | . unmatched
   32 matched: . other_stmt
   33        | . IF condicao THEN matched ELSE matched
   34 unmatched: . IF condicao THEN cmd
   35          | . IF condicao THEN matched ELSE unmatched
   36 other_stmt: . READLN TOKEN_ABRE_PAR variaveis TOKEN_FECHA_PAR
   37           | . WRITELN TOKEN_ABRE_PAR variaveis TOKEN_FECHA_PAR
   38           | . REPEAT comandos UNTIL condicao
   39           | . WHILE condicao DO other_stmt
   40           | . TOKEN_IDENTIFICADOR cmd_linha
   41           | . BEGN comandos END

    BEGN                 shift, and go to state 18
    READLN               shift, and go to state 19
    WRITELN              shift, and go to state 20
    REPEAT               shift, and go to state 21
    IF                   shift, and go to state 22
    WHILE                shift, and go to state 23
    TOKEN_IDENTIFICADOR  shift, and go to state 24

    $default  reduce using rule 29 (comandos)

    comandos    go to state 85
    cmd         go to state 26
    matched     go to state 27
    unmatched   go to state 28
    other_stmt  go to state 29


state 56

   11 variaveis: . TOKEN_IDENTIFICADOR mais_var
   12 mais_var: TOKEN_VIRGULA . variaveis

    TOKEN_IDENTIFICADOR  shift, and go to state 30

    variaveis  go to state 86


state 57

   11 variaveis: TOKEN_IDENTIFICADOR mais_var .

    $default  reduce using rule 11 (variaveis)


state 58

    7 dc_v: VAR variaveis TOKEN_DOIS_PONTOS . tipo_var TOKEN_PONTO_VIRGULA dc_v
    9 tipo_var: . REAL
   10         | . INTEGER

    INTEGER  shift, and go to state 87
    REAL     shift, and go to state 88

    tipo_var  go to state 89


state 59

   14 dc_p: PROCEDURE TOKEN_IDENTIFICADOR . parametros TOKEN_PONTO_VIRGULA corpo_p dc_p
   16 parametros: . TOKEN_ABRE_PAR lista_par TOKEN_FECHA_PAR
   17           | .  [TOKEN_PONTO_VIRGULA]

    TOKEN_ABRE_PAR  shift, and go to state 90

    $default  reduce using rule 17 (parametros)

    parametros  go to state 91


state 60

    5 dc_c: . CONST TOKEN_IDENTIFICADOR TOKEN_ATRIBUICAO numero TOKEN_PONTO_VIRGULA dc_c
    5     | CONST TOKEN_IDENTIFICADOR TOKEN_ATRIBUICAO numero TOKEN_PONTO_VIRGULA . dc_c
    6     | .  [BEGN, VAR, PROCEDURE]

    CONST  shift, and go to state 8

    $default  reduce using rule 6 (dc_c)

    dc_c  go to state 92


state 61

   41 other_stmt: BEGN comandos END .

    $default  reduce using rule 41 (other_stmt)


state 62

   36 other_stmt: READLN TOKEN_ABRE_PAR variaveis . TOKEN_FECHA_PAR

    TOKEN_FECHA_PAR  shift, and go to state 93


state 63

   37 other_stmt: WRITELN TOKEN_ABRE_PAR variaveis . TOKEN_FECHA_PAR

    TOKEN_FECHA_PAR  shift, and go to state 94


state 64
